--- a/js_pre1.html
+++ b/js_pre1.html
@@ -167,7 +167,7 @@
                     document.getElementById("demo").innerHTML = z;
                  </script>-->
                    
-                  <h1>JavaScript Arithmetic</h1>
+                <!--<h1>JavaScript Arithmetic</h1>
                  <h2>The + Operator</h2>
                  <p id="demo"></p>
                  <script>
@@ -175,7 +175,19 @@
                     let y = 2;
                     let z = x * y;
                     document.getElementById("demo").innerHTML = z;
-                 </script>
+                 </script>-->
+
+                 
+               <h1>JavaScript Arithmetic</h1>
+               <h2>Arithmetic Operations</h2>
+                 <p>A typical arithmetic operation takes two numbers (or expressions) and produces a new number.</p>
+                     <p id="demo"></p>
+                        <script>
+                            let a = 3;
+                            let x = (100 + 50) % a;
+                            document.getElementById("demo").innerHTML = x;
+                        </script>
+
 
 
 
