--- a/js_pre1.html
+++ b/js_pre1.html
@@ -178,16 +178,24 @@
                  </script>-->
 
                  
-               <h1>JavaScript Arithmetic</h1>
+               <!--<h1>JavaScript Arithmetic</h1>
                <h2>Arithmetic Operations</h2>
                  <p>A typical arithmetic operation takes two numbers (or expressions) and produces a new number.</p>
                      <p id="demo"></p>
                         <script>
                             let a = 3;
-                            let x = (100 + 50) % a;
+                            let x = (100 + 50) * a;
                             document.getElementById("demo").innerHTML = x;
-                        </script>
+                        </script>-->
 
+               <h1>JavaScript Arithmetic</h1>
+               <h2>The += Operator</h2>
+                  <p id="demo"></p>
+                  <script>
+                    var x = 10;
+                    x += 5;
+                    document.getElementById("demo").innerHTML = x;
+                  </script>
 
 
 
