--- a/js_pre1.html
+++ b/js_pre1.html
@@ -188,13 +188,14 @@
                             document.getElementById("demo").innerHTML = x;
                         </script>-->
 
-               <h1>JavaScript Arithmetic</h1>
+               <h1>JavaScript Assignment</h1>
                <h2>The += Operator</h2>
                   <p id="demo"></p>
                   <script>
-                    var x = 10;
-                    x += 5;
-                    document.getElementById("demo").innerHTML = x;
+                    let x = 10;
+                    let y = 10;
+                    x !== y;
+                    document.getElementById("demo").innerHTML = x <= y;
                   </script>
 
 
