--- a/js_pre1.html
+++ b/js_pre1.html
@@ -188,7 +188,7 @@
                             document.getElementById("demo").innerHTML = x;
                         </script>-->
 
-               <h1>JavaScript Assignment</h1>
+               <!--<h1>JavaScript Assignment</h1>
                <h2>The += Operator</h2>
                   <p id="demo"></p>
                   <script>
@@ -196,6 +196,15 @@
                     let y = 10;
                     x !== y;
                     document.getElementById("demo").innerHTML = x <= y;
+                  </script>-->
+
+                  <h1>javascript String</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    let a ="A";
+                    let b ="B";
+                    let result = a > b;
+                    document.getElementById("demo").innerHTML = result;
                   </script>
 
 
