--- a/js_pre1.html
+++ b/js_pre1.html
@@ -198,13 +198,22 @@
                     document.getElementById("demo").innerHTML = x <= y;
                   </script>-->
 
-                  <h1>javascript String</h1>
+                  <!--<h1>javascript String</h1>
                   <p id ="demo"></p>
                   <script>
                     let a ="A";
                     let b ="B";
                     let result = a > b;
                     document.getElementById("demo").innerHTML = result;
+                  </script>-->
+
+                  <h1>string addition</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    let a = "grimi";
+                    let b = "patel";
+                    let c = a + "" + b;
+                    document.getElementById("demo").innerHTML = c;
                   </script>
 
 
