--- a/js_pre1.html
+++ b/js_pre1.html
@@ -207,15 +207,22 @@
                     document.getElementById("demo").innerHTML = result;
                   </script>-->
 
-                  <h1>string addition</h1>
+                  <!--<h1>string addition</h1>
                   <p id ="demo"></p>
                   <script>
                     let a = "grimi";
                     let b = "patel";
                     let c = a + "" + b;
                     document.getElementById("demo").innerHTML = c;
+                  </script>-->
+             
+                  <h1>string addition</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    let a = "grimi";
+                    a +=  "patel";
+                    document.getElementById("demo").innerHTML = a;
                   </script>
-
 
 
 </body>
