string and number addition

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -216,12 +216,21 @@
                     document.getElementById("demo").innerHTML = c;
                   </script>-->
              
-                  <h1>string addition</h1>
+                  <!--<h1>string addition</h1>
                   <p id ="demo"></p>
                   <script>
                     let a = "grimi";
                     a +=  "patel";
                     document.getElementById("demo").innerHTML = a;
+                  </script>-->
+
+                  <h1>string and number addition</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    let x = 10 + 10;
+                    let y = "10" + 10;
+                    let z = "Hello" + 5;
+                    document.getElementById("demo").innerHTML = x + "<br>" + y + "<br>" + z;
                   </script>
 
 
