--- a/js_pre1.html
+++ b/js_pre1.html
@@ -224,13 +224,21 @@
                     document.getElementById("demo").innerHTML = a;
                   </script>-->
 
-                  <h1>string and number addition</h1>
+                  <!--<h1>string and number addition</h1>
                   <p id ="demo"></p>
                   <script>
                     let x = 10 + 10;
                     let y = "10" + 10;
                     let z = "Hello" + 5;
                     document.getElementById("demo").innerHTML = x + "<br>" + y + "<br>" + z;
+                  </script>-->
+
+                  <h1>logical operator</h1>
+                  <p id = "demo"></p>
+                  <script>
+                    let a = 6;
+                    let b = 2;
+                    document.getElementById("demo").innerHTML=(a < 7 && b < 5) + "<br>" + (a > 5 && b < 3);
                   </script>
 
 
