or logical operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -233,12 +233,20 @@
                     document.getElementById("demo").innerHTML = x + "<br>" + y + "<br>" + z;
                   </script>-->
 
-                  <h1>logical operator</h1>
+                  <!--<h1>logical operator</h1>
                   <p id = "demo"></p>
                   <script>
                     let a = 6;
                     let b = 2;
                     document.getElementById("demo").innerHTML=(a < 7 && b < 5) + "<br>" + (a > 5 && b < 3);
+                  </script>-->
+
+                  <h1>logical operator</h1>
+                  <p id = "demo"></p>
+                  <script>
+                    let a = 6;
+                    let b = 2;
+                    document.getElementById("demo").innerHTML=(a == 7 || b == 5) + "<br>" + (a == 5 || b == 2);
                   </script>
 
 
