not logical operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -233,7 +233,8 @@
                     document.getElementById("demo").innerHTML = x + "<br>" + y + "<br>" + z;
                   </script>-->
 
-                  <!--<h1>logical operator</h1>
+                  <!--<h1>and logical operator</h1>
+                  <h2>return true if both expression are true ,otherwise false</h2>
                   <p id = "demo"></p>
                   <script>
                     let a = 6;
@@ -241,13 +242,25 @@
                     document.getElementById("demo").innerHTML=(a < 7 && b < 5) + "<br>" + (a > 5 && b < 3);
                   </script>-->
 
-                  <h1>logical operator</h1>
+                  <!--<h1> or logical operator</h1>
+                  <h2>returns true if one or both expressions are true, otherwise it returns false</h2>
                   <p id = "demo"></p>
                   <script>
                     let a = 6;
                     let b = 2;
                     document.getElementById("demo").innerHTML=(a == 7 || b == 5) + "<br>" + (a == 5 || b == 2);
-                  </script>
+                  </script>-->
+
+                  <h1>not logical operator</h1>
+                  <h2> returns true for false statements and false for true statements</h2>
+                   <p id = "demo"></p>
+                   <script>
+                    let a = 6;
+                    let b = 3;
+                    document.getElementById("demo").innerHTML = !(a === b) + "<br>" + !(a > b);
+                   </script>
+
+
 
 
 </body>
