bitwise and operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -251,13 +251,20 @@
                     document.getElementById("demo").innerHTML=(a == 7 || b == 5) + "<br>" + (a == 5 || b == 2);
                   </script>-->
 
-                  <h1>not logical operator</h1>
+                  <!--<h1>not logical operator</h1>
                   <h2> returns true for false statements and false for true statements</h2>
                    <p id = "demo"></p>
                    <script>
                     let a = 6;
                     let b = 3;
                     document.getElementById("demo").innerHTML = !(a === b) + "<br>" + !(a > b);
+                   </script>-->
+
+
+                   <h1>bitwise and operator</h1>
+                   <p id= "demo"></p>
+                   <script>
+                    document.getElementById("demo").innerHTML = 5 & 3;
                    </script>
 
 
