--- a/js_pre1.html
+++ b/js_pre1.html
@@ -261,11 +261,21 @@
                    </script>-->
 
 
-                   <h1>bitwise and operator</h1>
+                   <!--<h1>bitwise and operator</h1>
                    <p id= "demo"></p>
+                   <p>Bitwise AND returns 1 only if both bits are 1</p>
                    <script>
                     document.getElementById("demo").innerHTML = 5 & 3;
+                   </script>-->
+
+                   <h1>bitwise OR operator</h1>
+                   <p id= "demo"></p>
+                   <p>Bitwise OR returns 1 if one of the bits is 1</p>
+                   <script>
+                    document.getElementById("demo").innerHTML = 3 | 1;
                    </script>
+
+
 
 
 
