--- a/js_pre1.html
+++ b/js_pre1.html
@@ -274,12 +274,20 @@
                    <script>
                     document.getElementById("demo").innerHTML = 3 | 1;
                    </script>-->
-
-                   <h1>bitwise OR operator</h1>
+ 
+                   <!--<h1>bitwise XOR operator</h1>
                    <p id= "demo"></p>
                    <script>
                     document.getElementById("demo").innerHTML = 3 ^ 1;
+                   </script>-->
+
+                   <h1>bitwise not operator</h1>
+                   <p id= "demo"></p>
+                   <script>
+                    document.getElementById("demo").innerHTML = ~6;
                    </script>
+
+
 
 
 
