--- a/js_pre1.html
+++ b/js_pre1.html
@@ -281,10 +281,10 @@
                     document.getElementById("demo").innerHTML = 3 ^ 1;
                    </script>-->
 
-                   <h1>bitwise left shift operator</h1>
+                   <h1>bitwise right shift operator</h1>
                    <p id= "demo"></p>
                    <script>
-                    document.getElementById("demo").innerHTML = 3 << 1;
+                    document.getElementById("demo").innerHTML = -3 >> 1;
                    </script>
 
 
