--- a/js_pre1.html
+++ b/js_pre1.html
@@ -281,10 +281,21 @@
                     document.getElementById("demo").innerHTML = 3 ^ 1;
                    </script>-->
 
-                   <h1>bitwise unsigned right operator</h1>
+                   <!--<h1>bitwise unsigned right operator</h1>
                    <p id= "demo"></p>
                    <script>
                     document.getElementById("demo").innerHTML = 5 >>> 1;
+                   </script>-->
+
+                   <h1>functions</h1>
+                   <p>Call a function which performs a calculation and returns the result</p>
+                   <p id = "demo"></p>
+                   <script>
+                    function myFunction(p1, p2){
+                      return p1 * p2
+                    }
+                    let result = myFunction(3,4)
+                    document.getElementById("demo").innerHTML=result;
                    </script>
 
 
