--- a/js_pre1.html
+++ b/js_pre1.html
@@ -287,7 +287,7 @@
                     document.getElementById("demo").innerHTML = 5 >>> 1;
                    </script>-->
 
-                   <h1>functions</h1>
+                   <!--<h1>functions</h1>
                    <p>Call a function which performs a calculation and returns the result</p>
                    <p id = "demo"></p>
                    <script>
@@ -297,9 +297,23 @@
                     function myFunction(a, b) {
                       return a * b;
                     }
+                   </script>-->
+
+
+                   <h1>javascript functions </h1>
+                   <p>Invoke (call) a function that converts from Fahrenheit to Celsius</p>
+                   <p id = "demo"></p>
+
+                   <script>
+                    function toCelsius(f){
+                      return (5/9) * (f-33)
+                    }
+
+                    let value =toCelsius(77);
+                    document.getElementById("demo").innerHTML=value;
                    </script>
 
-
+                   
 
 
 
