--- a/js_pre1.html
+++ b/js_pre1.html
@@ -309,7 +309,7 @@
                       return (5/9) * (f-33)
                     }
 
-                    let value =toCelsius(77);
+                    let value =toCelsius();
                     document.getElementById("demo").innerHTML=value;
                    </script>
 
