--- a/js_pre1.html
+++ b/js_pre1.html
@@ -301,7 +301,7 @@
 
 
                    <h1>javascript functions </h1>
-                   <p>Invoke (call) a function that converts from Fahrenheit to Celsius</p>
+                   <p>Accessing a function without () returns the function and not the function result</p>
                    <p id = "demo"></p>
 
                    <script>
@@ -309,7 +309,7 @@
                       return (5/9) * (f-33)
                     }
 
-                    let value =toCelsius();
+                    let value =toCelsius;
                     document.getElementById("demo").innerHTML=value;
                    </script>
 
