--- a/js_pre1.html
+++ b/js_pre1.html
@@ -301,16 +301,16 @@
 
 
                    <h1>javascript functions </h1>
-                   <p>Accessing a function without () returns the function and not the function result</p>
+                   <p>using function as variable</p>
                    <p id = "demo"></p>
 
                    <script>
-                    function toCelsius(f){
-                      return (5/9) * (f-33)
+                    let text = "the temprature is" + toCelsius(77) + "celsius.";
+                    document.getElementById("demo").innerHTML = text;
+                    
+                    function toCelsius(fahrenheit){
+                      return (5/9) * (fahrenheit-32)
                     }
-
-                    let value =toCelsius;
-                    document.getElementById("demo").innerHTML=value;
                    </script>
 
                    
