learn how to check arrays length

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -313,7 +313,7 @@
                     }
                    </script>-->
 
-                   <h1>javascript function</h1>
+                   <!--<h1>javascript function</h1>
                    <p>Outside myFunction() carName is undefined</p>
 
                    <p id = "demo1"></p>
@@ -330,6 +330,15 @@
                   }
 
                   myFunction(); 
+                   </script>-->
+
+
+                   <h1> array</h1>
+                   <p id = "demo"></p>
+                   <script>
+                    const name = ["grimi","tisha","ritvi"];
+                    let length = name .length;
+                    document.getElementById("demo").innerHTML=length;
                    </script>
 
 
