--- a/js_pre1.html
+++ b/js_pre1.html
@@ -333,13 +333,26 @@
                    </script>-->
 
 
-                   <h1> array</h1>
+                   <!--<h1> array</h1>
                    <p id = "demo"></p>
                    <script>
                     const name = ["grimi","tisha","ritvi"];
                     let length = name .length;
                     document.getElementById("demo").innerHTML=length;
+                   </script>-->
+
+                   <h1>if statements</h1>
+
+                   <p>Display "Good day!" if the hour is less than 18:00:</p>
+
+                   <p id = "demo">good evening!</p>
+                   <script>
+                    if(new Date().getHours() < 18){
+                         document.getElementById("demo").innerHTML = "Good day!";
+                    }
+
                    </script>
+
 
 
                    
