--- a/js_pre1.html
+++ b/js_pre1.html
@@ -353,7 +353,7 @@
 
                    </script>-->
 
-                   <h1>else statements</h1>
+                   <!--<h1>else statements</h1>
                    <p>A time-based greeting:</p>
                    <p id ="demo"></p>
                    <script>
@@ -368,7 +368,25 @@
                     }
 
                     document.getElementById("demo").innerHTML=greetings;
+                   </script>-->
+
+                   <h1>else if statements</h1>
+                   <p>A time-based greeting:</p>
+                   <p id ="demo"></p>
+                   <script>
+                    const time = new Date().getHours();
+                    let greeting;
+                    if (time < 10) {
+                      greeting = "Good morning";
+                    } else if (time < 20) {
+                        greeting = "Good day";
+                    } else {
+                        greeting = "Good evening";
+                    }
+                    document.getElementById("demo").innerHTML = greeting;
                    </script>
+
+
 
 
 
