--- a/js_pre1.html
+++ b/js_pre1.html
@@ -370,7 +370,7 @@
                     document.getElementById("demo").innerHTML=greetings;
                    </script>-->
 
-                   <h1>else if statements</h1>
+                   <!--<h1>else if statements</h1>
                    <p>A time-based greeting:</p>
                    <p id ="demo"></p>
                    <script>
@@ -384,7 +384,38 @@
                         greeting = "Good evening";
                     }
                     document.getElementById("demo").innerHTML = greeting;
+                   </script>-->
+
+                   <h1>switch statements</h1>
+                   <p id = "demo"></p>
+                   <script>
+                     let day;
+                     switch (new Date().getDay()) {
+                      case 0:
+                         day = "Sunday";
+                         break;
+                      case 1:
+                         day = "Monday";
+                         break;
+                      case 2:
+                         day = "Tuesday";
+                         break;
+                      case 3:
+                         day = "Wednesday";
+                         break;
+                      case 4:
+                        day = "Thursday";
+                        break;
+                      case 5:
+                        day = "Friday";
+                        break;
+                      case  6:
+                        day = "Saturday";
+                     }
+                      document.getElementById("demo").innerHTML = "Today is " + day;
                    </script>
+
+
 
 
 
