practice for loop

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -386,7 +386,7 @@
                     document.getElementById("demo").innerHTML = greeting;
                    </script>-->
 
-                   <h1>switch statements</h1>
+                   <!--<h1>switch statements</h1>
                    <p id = "demo"></p>
                    <script>
                      let day;
@@ -413,6 +413,19 @@
                         day = "Saturday";
                      }
                       document.getElementById("demo").innerHTML = "Today is " + day;
+                   </script>-->
+
+                   <h2>for loop</h2>
+                   <p id ="demo"></p>
+                   <script>
+                    const car = ["audi","ford","jeep","bmw"];
+                     
+                    let text = "";
+                    for(let i = 0; i < car.length; i++){
+                      text += car[i] + "<br>";
+                    }
+
+                    document.getElementById("demo").innerHTML = text;
                    </script>
 
 
