using var in for loop

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -417,15 +417,13 @@
 
                    <h2>for loop</h2>
                    <p id ="demo"></p>
-                   <script>
-                    const car = ["audi","ford","jeep","bmw"];
-                     
-                    let text = "";
-                    for(let i = 0; i < car.length; i++){
-                      text += car[i] + "<br>";
+                   <script> 
+                    var i = 0;
+                    for(i = 0; i <= 5; i++){
+                    
                     }
 
-                    document.getElementById("demo").innerHTML = text;
+                    document.getElementById("demo").innerHTML = i;
                    </script>
 
 
