--- a/js_pre1.html
+++ b/js_pre1.html
@@ -415,17 +415,30 @@
                       document.getElementById("demo").innerHTML = "Today is " + day;
                    </script>-->
 
-                   <h2>for loop</h2>
+                   <!--<h2>for loop</h2>
                    <p id ="demo"></p>
                    <script> 
-                    var i = 0;
-                    for(i = 0; i <= 5; i++){
-                    
+                    let sum = 0;
+                    for(let i = 0; i <= 15; i++){
+                        sum = sum + 1;
                     }
 
-                    document.getElementById("demo").innerHTML = i;
-                   </script>
+                    document.getElementById("demo").innerHTML = sum;
+                   </script>-->
 
+                   <h1>for in loop</h1>
+                   <p>The for in statement loops through the properties of an object</p>
+
+                   <p id = "demo"></p>
+                   <script>
+                    const person ={fname : "grimi",lname : "patel", age : "21"}
+
+                    let text = "";
+                    for(let x in person){
+                      text += person[x]+ " ";
+                    }
+                    document.getElementById("demo").innerHTML = text;
+                   </script>
 
 
 
