--- a/js_pre1.html
+++ b/js_pre1.html
@@ -426,7 +426,7 @@
                     document.getElementById("demo").innerHTML = sum;
                    </script>-->
 
-                   <h1>for in loop</h1>
+                   <!--<h1>for in loop</h1>
                    <p>The for in statement loops through the properties of an object</p>
 
                    <p id = "demo"></p>
@@ -438,6 +438,19 @@
                       text += person[x]+ " ";
                     }
                     document.getElementById("demo").innerHTML = text;
+                   </script>-->
+
+                   <h1>forIN over array</h1>
+                   <p>The for in statement can loops over array values</p>
+                   <p id ="demo"></p>
+                   <script>
+                    const number =[1,2,3,4,5,6];
+
+                    let txt = "";
+                    for(let x in number){
+                      txt += number[x]+ "<br>";
+                    }
+                    document.getElementById("demo").innerHTML = txt;
                    </script>
 
 
