--- a/js_pre1.html
+++ b/js_pre1.html
@@ -495,7 +495,7 @@
                     document.getElementById("demo").innerHTML = txt;
                   </script>-->
 
-                  <h1>while loop</h1>
+                  <!--<h1>while loop</h1>
                   <p id = "demo"></p>
                   <script>
                     let txt ="";
@@ -505,6 +505,20 @@
                       i++
                     }
                     document.getElementById("demo").innerHTML = txt;
+                  </script>-->
+
+                  <h1>do-while loop</h1>
+                  <p id = "demo"></p>
+                  <script>
+                    let txt = "";
+                    let i = 0;
+                      do {
+                        txt += "<br>" + i;
+                        i ++
+                      }
+                      while(i <= 10);
+                     
+                    document.getElementById("demo").innerHTML=txt;
                   </script>
 
 
