practice of  array

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -507,7 +507,7 @@
                     document.getElementById("demo").innerHTML = txt;
                   </script>-->
 
-                  <h1>do-while loop</h1>
+                  <!--<h1>do-while loop</h1>
                   <p id = "demo"></p>
                   <script>
                     let txt = "";
@@ -519,7 +519,15 @@
                       while(i <= 10);
                      
                     document.getElementById("demo").innerHTML=txt;
-                  </script>
+                  </script>-->
+
+                 <h1>Array</h1>
+                 <p id = "demo"></p>
+                 <script>
+                  const name = ["abc","def","ghi"];
+                  document.getElementById("demo").innerHTML=name;
+                 </script>
+                
 
 
 
