practice using keyword new in array

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -521,12 +521,20 @@
                     document.getElementById("demo").innerHTML=txt;
                   </script>-->
 
-                 <h1>Array</h1>
+                 <!--<h1>Array</h1>
                  <p id = "demo"></p>
                  <script>
                   const name = ["abc","def","ghi"];
                   document.getElementById("demo").innerHTML=name;
+                 </script>-->
+
+                 <h1>array</h1>
+                 <p id = "demo"></p>
+                 <script>
+                   const name = new Array("abc","def","ghi");
+                   document.getElementById("demo").innerHTML = name;
                  </script>
+                 
                 
 
 
