practice Changing an Array Element

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -535,10 +535,18 @@
                    document.getElementById("demo").innerHTML = name;
                  </script>-->
 
+                 <!--<h1>array</h1>
+                 <p id = "demo"></p>
+                 <script>
+                  const name = ["abc","def","ghi"];
+                  document.getElementById("demo").innerHTML = name[2];
+                 </script>-->
+
                  <h1>array</h1>
                  <p id = "demo"></p>
                  <script>
                   const name = ["abc","def","ghi"];
+                  name[2] = "gdj";
                   document.getElementById("demo").innerHTML = name[2];
                  </script>
                  
