practice array converting string

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -542,15 +542,22 @@
                   document.getElementById("demo").innerHTML = name[2];
                  </script>-->
 
-                 <h1>array</h1>
+                 <!--<h1>array</h1>
                  <p id = "demo"></p>
                  <script>
                   const name = ["abc","def","ghi"];
                   name[2] = "gdj";
                   document.getElementById("demo").innerHTML = name[2];
+                 </script>-->       
+
+                 <h1>array converting string</h1>
+                 <p>toString() method</p>
+
+                 <p id = "demo"></p>
+                 <script>
+                  const name = ["abc","gdj","efh"];
+                  document.getElementById("demo").innerHTML = name.toString();
                  </script>
-                 
-                
 
 
 
