practice array are object

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -550,13 +550,20 @@
                   document.getElementById("demo").innerHTML = name[2];
                  </script>-->       
 
-                 <h1>array converting string</h1>
+                 <!--<h1>array converting string</h1>
                  <p>toString() method</p>
 
                  <p id = "demo"></p>
                  <script>
                   const name = ["abc","gdj","efh"];
                   document.getElementById("demo").innerHTML = name.toString();
+                 </script>-->
+
+                 <h1>array object</h1>
+                 <p id = "demo"></p>
+                 <script>
+                    const name ={firstname:"grimi",lastname:"patel",age:"21"};
+                    document.getElementById("demo").innerHTML=name.firstname;
                  </script>
 
 
