practice  Accessing the Last Array Element

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -559,13 +559,20 @@
                   document.getElementById("demo").innerHTML = name.toString();
                  </script>-->
 
-                 <h1>array object</h1>
+                 <!--<h1>array object</h1>
                  <p id = "demo"></p>
                  <script>
                     const name ={firstname:"grimi",lastname:"patel",age:"21"};
                     document.getElementById("demo").innerHTML=name.firstname;
-                 </script>
+                 </script>-->
+                            
 
+                <h1>array object</h1>
+                <p id = "demo"></p>
+                  <script>
+                    const name =["grimi","patel","21"];
+                    document.getElementById("demo").innerHTML=name[name.length -1];
+                    </script>    
 
 
 
