practice associative array

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -607,7 +607,7 @@
                     }
                   </script>-->
 
-                  <h1>adding array elements</h1>
+                  <!--<h1>adding array elements</h1>
                   <p>>Adding elements with high indexes can create undefined "holes" in an array</p>
                   <p id ="demo"></p>
                   <script>
@@ -621,6 +621,13 @@
                     }
 
                     document.getElementById("demo").innerHTML=txt;
+                  </script>-->
+
+                  <h1>Associative Arrays</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    const person =["grimi","patel","21"];
+                    document.getElementById("demo").innerHTML=person[0] + " " + person.length;
                   </script>
                  
 
