practice isArray() method

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -631,15 +631,13 @@
                   </script>-->
 
                 
-                  <h1>The typeof Operator</h1>
-
-                  <p>The typeof operator, when used on an array, returns object:</p>
+                  <h1>isArray()method</h1>
 
                   <p id="demo"></p>
 
                   <script>
                     const fruits = ["Banana", "Orange", "Apple", "Mango"];
-                    document.getElementById("demo").innerHTML = typeof fruits;
+                    document.getElementById("demo").innerHTML =Array.isArray(fruits);
                   </script>
 
 
