practice instanceof operator in array

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -631,13 +631,21 @@
                   </script>-->
 
                 
-                  <h1>isArray()method</h1>
+                  <!--<h1>isArray()method</h1>
 
                   <p id="demo"></p>
 
                   <script>
                     const fruits = ["Banana", "Orange", "Apple", "Mango"];
                     document.getElementById("demo").innerHTML =Array.isArray(fruits);
+                  </script>-->
+
+                  <h1>instanceOf operator</h1>
+                  <p>The instanceof operator returns true if an object is an instance of a specified object type</p>
+                  <p id = "demo"></p>
+                  <script>
+                    const fruits = ["Banana", "Orange", "Apple", "Mango"];
+                    document.getElementById("demo").innerHTML ="Array: " +(fruits instanceof Array);
                   </script>
 
 
