pracctice how to create variable in object

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -667,7 +667,7 @@
                   "The first fruit is: " + fruits[0];
                   </script>-->
 
-                  <h2>Nested JavaScript Objects and Arrays.</h2>
+                  <!--<h2>Nested JavaScript Objects and Arrays.</h2>
                   <p id="demo"></p>
                   <script>
                     let x = ""; 
@@ -688,6 +688,14 @@
                      } 
                    }
                     document.getElementById("demo").innerHTML = x;
+                  </script>-->
+
+                  <h1>javascript Variables</h1>
+                  <p id ="demo"></p>
+
+                  <script>
+                    let car = "audi";
+                    document.getElementById("demo").innerHTML = "car :" + car;
                   </script>
                  
 
