--- a/js_pre1.html
+++ b/js_pre1.html
@@ -690,12 +690,20 @@
                     document.getElementById("demo").innerHTML = x;
                   </script>-->
 
-                  <h1>javascript Variables</h1>
+                  <!--<h1>javascript Variables</h1>
                   <p id ="demo"></p>
 
                   <script>
                     let car = "audi";
                     document.getElementById("demo").innerHTML = "car :" + car;
+                  </script>-->
+
+                  <h1>javascript object</h1>
+                  <h2>crating an object</h2>
+                  <p id = "demo"></p>
+                  <script>
+                    const car = {type:"Fiat", model:"500", color:"white"};
+                    document.getElementById("demo").innerHTML="this car is" + car.type;
                   </script>
                  
 
