--- a/js_pre1.html
+++ b/js_pre1.html
@@ -698,12 +698,20 @@
                     document.getElementById("demo").innerHTML = "car :" + car;
                   </script>-->
 
-                  <h1>javascript object</h1>
+                  <!--<h1>javascript object</h1>
                   <h2>crating an object</h2>
                   <p id = "demo"></p>
                   <script>
                     const car = {type:"Fiat", model:"500", color:"white"};
                     document.getElementById("demo").innerHTML="this car is" + car.type;
+                  </script>-->
+
+                  <h1>Creating JavaScript Objects</h1>
+                  <h2>Using an Object Literal</h2>
+                  <p id = "demo"></p>
+                  <script>
+                    const person = {firstName:"John", lastName:"Doe", age:50, eyeColor:"blue"};
+                    document.getElementById("demo").innerHTML=person.firstName + " is " + person.age + "years old";
                   </script>
                  
 
