practice in let variable

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -723,11 +723,22 @@
                    }
                   </script>-->
 
-                  <h1>simple variable</h1>
+                  <!--<h1>simple variable</h1>
                   <p id = "demo"></p>
                   <script>
                     let a = 7;
                     console.log(a)
+                  </script>-->
+
+                  <h1>variables</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    let b = "grimi";
+                    {
+                        let b ="rutvi";
+                        console.log(b)
+                    }
+                    console.log(b)
                   </script>
                  
 
