practice primitive data type

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -730,7 +730,7 @@
                     console.log(a)
                   </script>-->
 
-                  <h1>variables</h1>
+                  <!--<h1>variables</h1>
                   <p id ="demo"></p>
                   <script>
                     let b = "grimi";
@@ -739,6 +739,20 @@
                         console.log(b)
                     }
                     console.log(b)
+                  </script>-->
+
+                  <h1>primitive and object</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    let a = null;
+                    let b = 305;
+                    let c = true;
+                    let d = BigInt(305) + BigInt(5);
+                    let e = "grimi";
+                    let f = Symbol("i am a grimi");
+                    let g = undefined;
+                    console.log(a,b,c,d,e,f,g)
+                    console.log(typeof e)
                   </script>
                  
 
