practice simple object

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -741,7 +741,7 @@
                     console.log(b)
                   </script>-->
 
-                  <h1>primitive and object</h1>
+                  <!--<h1>primitive and object</h1>
                   <p id ="demo"></p>
                   <script>
                     let a = null;
@@ -753,7 +753,22 @@
                     let g = undefined;
                     console.log(a,b,c,d,e,f,g)
                     console.log(typeof e)
+                  </script>-->
+
+                  <h1>primitive and object</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    const value = {
+                      "grimi" : true,
+                      "rutvi" : false,
+                      "dhani" : 12,
+                    }
+                    console.log(value["grimi"])
                   </script>
+
+
+
+
                  
 
 
