practice create variable type of string and add number

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -755,7 +755,7 @@
                     console.log(typeof e)
                   </script>-->
 
-                  <h1>primitive and object</h1>
+                  <!--<h1>primitive and object</h1>
                   <p id ="demo"></p>
                   <script>
                     const value = {
@@ -764,6 +764,14 @@
                       "dhani" : 12,
                     }
                     console.log(value["grimi"])
+                  </script>-->
+
+                  <h1>practice</h1>
+                  <p id ="demo"></p>
+                  <script>
+                    let a = "grimi";
+                    let b = 5;
+                    console.log(a + b)
                   </script>
 
 
