practice of add new key to the const object

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -766,13 +766,26 @@
                     console.log(value["grimi"])
                   </script>-->
 
-                  <h1>practice</h1>
+                  <!--<h1>practice</h1>
                   <p id ="demo"></p>
                   <script>
                     let a = "grimi";
                     let b = 5;
                     console.log(a + b)
-                  </script>
+                  </script>-->
+
+                   <h1>practice</h1>
+                   <p id ="demo"></p>
+                   <script>
+                       const a = {
+                        name : "grimi",
+                        age : 21,
+                        isprincipal : false
+                       }
+                       a['friend'] = "tisha"
+                       a['name'] = "rutvi"
+                       console.log(a) 
+                   </script>
 
 
 
