practie create a word dictonary

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -774,7 +774,7 @@
                     console.log(a + b)
                   </script>-->
 
-                   <h1>practice</h1>
+                   <!--<h1>practice</h1>
                    <p id ="demo"></p>
                    <script>
                        const a = {
@@ -785,6 +785,17 @@
                        a['friend'] = "tisha"
                        a['name'] = "rutvi"
                        console.log(a) 
+                   </script>-->
+
+                   <h1>practice</h1>
+                   <p id ="demo"></p>
+                   <script>
+                     const dict = {
+                      appreciate :"recognize the full worth of.",
+                      ataraxia : "a state of freedom from emotional disturbance and anxiety",
+                      yakka :"work,especially hard work"
+                     } 
+                     console.log(dict.yakka)
                    </script>
 
 
