practice basic of operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -787,7 +787,7 @@
                        console.log(a) 
                    </script>-->
 
-                   <h1>practice</h1>
+                   <!--<h1>practice</h1>
                    <p id ="demo"></p>
                    <script>
                      const dict = {
@@ -796,6 +796,17 @@
                       yakka :"work,especially hard work"
                      } 
                      console.log(dict.yakka)
+                   </script>-->
+
+                   <h1>operator</h1>
+                   <p id ="demo"></p>
+                   <script>
+                    let a = 34;
+                    let b = 5;
+                    console.log("a + b =" , a+b)
+                    console.log("a - b =" , a-b)
+                    console.log("a / b =" , a/b)
+                    console.log("a * b =" , a*b)
                    </script>
 
 
