practice arithmatic operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -801,12 +801,16 @@
                    <h1>operator</h1>
                    <p id ="demo"></p>
                    <script>
-                    let a = 34;
+                    let a = 10;
                     let b = 5;
                     console.log("a + b =" , a+b)
                     console.log("a - b =" , a-b)
                     console.log("a / b =" , a/b)
                     console.log("a * b =" , a*b)
+                    console.log("a ** b =" , a**b) 
+                    console.log("a % b =" , a%b) 
+                    console.log("a++  =" , a++)
+                    console.log("a-- =" , a--)
                    </script>
 
 
