practice assignment operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -798,7 +798,7 @@
                      console.log(dict.yakka)
                    </script>-->
 
-                   <h1>operator</h1>
+                   <!--<h1>operator</h1>
                    <p id ="demo"></p>
                    <script>
                     let a = 10;
@@ -811,6 +811,37 @@
                     console.log("a % b =" , a%b) 
                     console.log("a++  =" , a++)
                     console.log("a-- =" , a--)
+                   </script>-->
+
+                   <!--<h1>operator</h1>
+                   <p id ="demo"></p>
+                   <script>
+                    
+                    let a = 10;
+                    console.log("++a = " , ++a)
+                    console.log("a++  =" , a++)
+                    console.log("--a = " , --a)
+                    console .log("a-- =" , a--)
+                    console.log("a = ", a)
+                    console.log("a-- =" , a--)
+                   </script>-->
+
+                   <h1>Assignment operator</h1>
+                   <p id = "demo"></p>
+                   <script>
+                       let a = 2;
+                       a += 5
+                       console.log(a)
+                       a -= 5
+                       console.log(a)
+                       a *= 5
+                       console.log(a)
+                       a /= 5
+                       console.log(a)
+                       a **= 5
+                       console.log(a)
+                       a %= 5
+                       console.log(a)
                    </script>
 
 
